# Fog_Tracer

./: CMakeLists.txt  README.md
src/: box.h  camera.h  fog.h  hitrecord.h  light.h  main.cpp  material.h  object.h  plane.h  ray.h  renderer.h  scene.h  sphere.h  vec3.h
